Asteroid debris spawn fix and other bugfixes